--- a/www/templates/battle-tab-turn.html
+++ b/www/templates/battle-tab-turn.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{scenario.battle.title}} - {{scenario.title}}" class="bubble-background">
+<ion-view view-title="{{battle.name}} - {{battle.desc}}" class="bubble-background">
 	<ion-nav-buttons side="right">
       <button class="button button-large icon ion-android-refresh" ng-click="reset()">
       </button>
