--- a/www/templates/battle-tab-armymorale.html
+++ b/www/templates/battle-tab-armymorale.html
@@ -4,6 +4,31 @@
       </button>
 	</ion-nav-buttons>
 	<ion-content padding="true">
-		<div>Army Morale</div>
+		<ion-list>
+			<ion-item class="card">
+				<div class="item item-divider row">
+					<b class="col col-90">Morale Levels</b>
+					<i class="col"></i>
+				</div>
+				<div class="item">
+					<div class="row item item-input">
+						<span class="input-label col col-25">British</span>
+						<input-spin class="col col-50 text-center" value="current.britishMorale" min="0" max="{{maxMorale}}" step="1" editable />
+					</div>
+				</div>
+				<div class="item">
+					<div class="row item item-input">
+						<span class="input-label col col-25">American</span>
+						<input-spin class="col col-50 text-center" value="current.americanMorale" min="-1" max="{{maxMorale}}" step="1" editable />
+					</div>
+				</div>
+				<div class="item">
+					<div class="row item item-input">
+						<span class="input-label col col-25">French</span>
+						<input-spin class="col col-50 text-center" value="current.frenchMorale" min="-1" max="{{maxMorale}}" step="1" editable />
+					</div>
+				</div>
+			</ion-item>
+		</ion-list>
 	</ion-content>
 </ion-view>
