--- a/www/templates/battle-tab-victory.html
+++ b/www/templates/battle-tab-victory.html
@@ -4,6 +4,25 @@
       </button>
 	</ion-nav-buttons>
 	<ion-content padding="true">
-		<div>Victory</div>
+		<ion-list>
+			<ion-item class="card">
+				<div class="item item-divider row">
+					<b class="col col-90">Victory</b>
+					<i class="col"></i>
+				</div>
+				<div class="item">
+					<div class="row item item-input">
+						<span class="input-label col col-25">British</span>
+						<input-spin class="col col-50 text-center" value="current.britishVP" min="0" max="100" step="1" editable />
+					</div>
+				</div>
+				<div class="item">
+					<div class="row item item-input">
+						<span class="input-label col col-25">American</span>
+						<input-spin class="col col-50 text-center" value="current.americanVP" min="-1" max="100" step="1" editable />
+					</div>
+				</div>
+			</ion-item>
+		</ion-list>
 	</ion-content>
 </ion-view>
