--- a/www/templates/battle-tab-melee.html
+++ b/www/templates/battle-tab-melee.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{scenario.battle.title}} - {{scenario.title}}" class="bubble-background">
+<ion-view view-title="{{battle.name}} - {{battle.desc}}" class="bubble-background">
 	<ion-nav-buttons side="right">
       <button class="button button-large icon ion-android-refresh" ng-click="reset()">
       </button>
@@ -6,30 +6,22 @@
 	<ion-content padding="true">
 		<ion-list>
 			<ion-item class="card">
-				<div class="item item-divider row"> <!--ng-click="toggleItem('results')"-->
+				<div class="item item-divider"> <!--ng-click="toggleItem('results')"-->
 					<!--i class="icon col" ng-class="isItemShown('results') ? 'ion-arrow-down-b' : 'ion-arrow-right-b'"></i-->
-					<div class="col">
-						<button class="button button-small button-assertive" ng-click="onRoll()">
-							<img class="button-roll" src="img/dice/droll.png"></img>
-						</button>
-					</div>
-					<div class="col col-80">
-						<img class="dice-image" src="img/dice/red{{meleeDie}}.png" ng-click="onDie(1)"></img>
-						<img class="dice-image" src="img/dice/green{{tieBreakerDie}}.png" ng-click="onDie(2)"></img>
-					</div>
+					<dice defs="[{num: 1, low: 0, high: 9, color: 'red'},{num: 1, low: 0, high: 9, color: 'white'}]" on-roll="onRoll(dice)" />
 				</div>
 				<div class="item" ng-show="isItemShown('results')">
+					<label class="item item-input item-select">
+						<span class="input-label">Odds</span>
+					    <select ng-model="results.odds" ng-options="o for o in melee.odds" ng-change="onChange()" required></select>
+		            </label>
 					<div class="row">
-						<span class="item-label col col-20">Odds</span>
-						<input class="col col-30" type="text" ng-model="odds" readonly />
-					
-						<span class="item-label col col-20">Results</span>
-						<input class="col col-30" type="text" ng-model="results" readonly />
+						<span class="item-label col col-20">Result</span>
+						<input class="col col-80" type="text" ng-model="results.melee" readonly />
 					</div>
 				</div>
-				
 			</ion-item>
-		
+
 			<ion-item class="card">
 				<div class="item item-divider row" ng-click="toggleItem('attacker')">
 					<i class="icon col" ng-class="isItemShown('attacker') ? 'ion-arrow-down-b' : 'ion-arrow-right-b'"></i>
@@ -37,19 +29,30 @@
 					<i class="col"></i>
 				</div>
 				<div class="item" ng-show="isItemShown('attacker')">
-					<div class="row">
-						<ion-radio class="col" ng-model="attack.level" ng-value="'AA'" ng-change="onChange()">AA</ion-radio>
-						<ion-radio class="col" ng-model="attack.level" ng-value="'AB'" ng-change="onChange()">AB</ion-radio>
-						<ion-radio class="col" ng-model="attack.level" ng-value="'A'" ng-change="onChange()">A</ion-radio>
-						<ion-radio class="col" ng-model="attack.level" ng-value="'B'" ng-change="onChange()">B</ion-radio>
-						<ion-radio class="col" ng-model="attack.level" ng-value="'C'" ng-change="onChange()">C</ion-radio>
-						<ion-radio class="col" ng-model="attack.level" ng-value="'Arty'" ng-change="onChange()">Arty</ion-radio>
+					<label class="item item-input item-select">
+						<span class="input-label">Nationality</span>
+					    <select ng-model="melee.attack.nationality" ng-options="n for n in melee.nationalities" ng-change="onChange()" required></select>
+		            </label>
+					<div class="row item item-input">
+						<span class="input-label col col-25">Morale</span>
+						<input-spin class="col col-50 text-center" value="melee.attack.morale" min="-5" max="5" step="1" editable />
 					</div>
-					<div class="card">
-						<ion-checkbox ng-model="attack.wreckbde" ng-change="onChange()">Wrk Bde</ion-checkbox>
+					<div class="row item item-input">
+						<span class="input-label col col-25">Leader</span>
+						<input-spin class="col col-50 text-center" value="melee.attack.leader" min="-5" max="5" step="1" editable />
 					</div>
+					<ion-list>
+						<ion-item>
+							<ion-checkbox ng-model="melee.attack.tacticalldr" ng-change="onChange()">Tactical Leader</ion-checkbox>
+						</ion-item>
+						<ion-item>
+							<ion-checkbox ng-model="melee.attack.diversion" ng-change="onChange()">Diversion</ion-checkbox>
+						</ion-item>
+						<ion-item ng-repeat="m in melee.attack.modifiers">
+							<ion-checkbox ng-model="melee.attack.modifier[m.name]" ng-change="onChange()">{{m.name}}</ion-checkbox>
+						</ion-item>
+					</ion-list>
 				</div>
-				
 			</ion-item>
 			
 			<ion-item class="card">
@@ -60,19 +63,26 @@
 				</div>
 				
 				<div class="item" ng-show="isItemShown('defender')">
-					<div class="row">
-						<ion-checkbox class="col text-right" ng-model="defend.aa" ng-change="onChange()">AA</ion-checkbox>
-						<ion-checkbox class="col text-right" ng-model="defend.ab" ng-change="onChange()">AB</ion-checkbox>
-						<ion-checkbox class="col text-right" ng-model="defend.a" ng-change="onChange()">A</ion-checkbox>
-						<ion-checkbox class="col text-right" ng-model="defend.b" ng-change="onChange()">B</ion-checkbox>
-						<ion-checkbox class="col text-right" ng-model="defend.c" ng-change="onChange()">C</ion-checkbox>
-						<ion-checkbox class="col text-right" ng-model="defend.arty" ng-change="onChange()">Arty</ion-checkbox>
+					<label class="item item-input item-select">
+						<span class="input-label">Nationality</span>
+					    <select ng-model="melee.defend.nationality" ng-options="n for n in melee.nationalities" ng-change="onChange()" required></select>
+		            </label>
+					<div class="row item item-input">
+						<span class="input-label col col-25">Morale</span>
+						<input-spin class="col col-50 text-center" value="melee.defend.morale" min="-5" max="5" step="1" editable />
 					</div>
-					<div class="card">
-						<ion-checkbox ng-model="defend.trench" ng-change="onChange()">Trench</ion-checkbox>
-						<ion-checkbox ng-model="defend.wrkbgd" ng-change="onChange()">Wrecked Bde</ion-checkbox>
-						<ion-checkbox ng-model="defend.wrkdiv" ng-change="onChange()">Wrecked Div</ion-checkbox>
+					<div class="row item item-input">
+						<span class="input-label col col-25">Leader</span>
+						<input-spin class="col col-50 text-center" value="melee.defend.leader" min="-5" max="5" step="1" editable />
 					</div>
+					<ion-list>
+						<ion-item>
+							<ion-checkbox ng-model="melee.defend.tacticalldr" ng-change="onChange()">Tactical Leader</ion-checkbox>
+						</ion-item>
+						<ion-item ng-repeat="m in melee.defend.modifiers">
+							<ion-checkbox ng-model="melee.defend.modifier[m.name]" ng-change="onChange()">{{m.name}}</ion-checkbox>
+						</ion-item>
+					</ion-list>
 				</div>
 			</ion-item>
 			
