--- a/www/templates/battle.html
+++ b/www/templates/battle.html
@@ -15,17 +15,17 @@
   <ion-tab title="Melee" icon-off="ion-ios-medical-outline" icon-on="ion-ios-medical" href="#/app/battle/{{battle.id}}/melee">
     <ion-nav-view name="battle-melee"></ion-nav-view>
   </ion-tab>
-  
+
   <ion-tab title="Morale" icon-off="ion-ios-pint-outline" icon-on="ion-ios-pint" href="#/app/battle/{{battle.id}}/morale">
     <ion-nav-view name="battle-morale"></ion-nav-view>
   </ion-tab>
-  
+
   <ion-tab title="Army Morale" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/app/battle/{{battle.id}}/armymorale">
     <ion-nav-view name="battle-armymorale"></ion-nav-view>
   </ion-tab>
-  
-  <ion-tab title="Victory" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/app/battle/{{battle.id}}/victory">
+
+  <ion-tab title="Victory" icon-off="ion-ios-flag-outline" icon-on="ion-ios-flag" href="#/app/battle/{{battle.id}}/victory">
     <ion-nav-view name="battle-victory"></ion-nav-view>
   </ion-tab>
-  
+
 </ion-tabs>
