--- a/www/templates/battle.html
+++ b/www/templates/battle.html
@@ -1,31 +1,50 @@
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<div class="turn">
+	<div class="row">
+		<div class="col col-20">
+			<img class="battle-image-lg" src="img/{{battle.image}}" />
+		</div>
+		<div class="col col-80">
+			<div class="col">
+				<div class="row">
+					<button class="col-10 button button-positive ion-chevron-left" ng-click="turnPrev()"></button>
+					<input  class="col-80 text-center" type="text" readonly="readonly" value="{{turn | date:'MMM d, y h:mm a'}}" />
+					<button class="col-10 button button-positive ion-chevron-right" ng-click="turnNext()"></button>
+				</div>
+			</div>
+			<div class="col">
+				<div class="row">
+					<button class="col-10 button button-positive ion-chevron-left" ng-click="phasePrev()"></button>
+					<input class="col-80 text-center" type="text" readonly="readonly" value="{{phase}}">
+					<button class="col-10 button button-positive ion-chevron-right" ng-click="phaseNext()"></button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<ion-tabs class="tabs-icon-top tabs-color-active-positive battle-tabs" hide-nav-bar="true">
 
-  <ion-tab title="Turn" icon-off="ion-ios-clock-outline" icon-on="ion-ios-clock" href="#/app/battle/{{battle.id}}/turn">
-    <ion-nav-view name="battle-turn"></ion-nav-view>
-  </ion-tab>
+	<ion-tab title="Initiative" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/app/battle/{{battle.id}}/initiative">
+		<ion-nav-view name="battle-initiative"></ion-nav-view>
+	</ion-tab>
 
-  <ion-tab title="Initiative" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/app/battle/{{battle.id}}/initiative">
-    <ion-nav-view name="battle-initiative"></ion-nav-view>
-  </ion-tab>
+	<ion-tab title="Fire" icon-off="ion-ios-flame-outline" icon-on="ion-ios-flame" href="#/app/battle/{{battle.id}}/fire">
+		<ion-nav-view name="battle-fire"></ion-nav-view>
+	</ion-tab>
 
-  <ion-tab title="Fire" icon-off="ion-ios-flame-outline" icon-on="ion-ios-flame" href="#/app/battle/{{battle.id}}/fire">
-    <ion-nav-view name="battle-fire"></ion-nav-view>
-  </ion-tab>
+	<ion-tab title="Melee" icon-off="ion-ios-medical-outline" icon-on="ion-ios-medical" href="#/app/battle/{{battle.id}}/melee">
+		<ion-nav-view name="battle-melee"></ion-nav-view>
+	</ion-tab>
 
-  <ion-tab title="Melee" icon-off="ion-ios-medical-outline" icon-on="ion-ios-medical" href="#/app/battle/{{battle.id}}/melee">
-    <ion-nav-view name="battle-melee"></ion-nav-view>
-  </ion-tab>
+	<ion-tab title="Morale" icon-off="ion-ios-pint-outline" icon-on="ion-ios-pint" href="#/app/battle/{{battle.id}}/morale">
+		<ion-nav-view name="battle-morale"></ion-nav-view>
+	</ion-tab>
 
-  <ion-tab title="Morale" icon-off="ion-ios-pint-outline" icon-on="ion-ios-pint" href="#/app/battle/{{battle.id}}/morale">
-    <ion-nav-view name="battle-morale"></ion-nav-view>
-  </ion-tab>
+	<ion-tab title="Army Morale" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/app/battle/{{battle.id}}/armymorale">
+		<ion-nav-view name="battle-armymorale"></ion-nav-view>
+	</ion-tab>
 
-  <ion-tab title="Army Morale" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/app/battle/{{battle.id}}/armymorale">
-    <ion-nav-view name="battle-armymorale"></ion-nav-view>
-  </ion-tab>
-
-  <ion-tab title="Victory" icon-off="ion-ios-flag-outline" icon-on="ion-ios-flag" href="#/app/battle/{{battle.id}}/victory">
-    <ion-nav-view name="battle-victory"></ion-nav-view>
-  </ion-tab>
+	<ion-tab title="Victory" icon-off="ion-ios-flag-outline" icon-on="ion-ios-flag" href="#/app/battle/{{battle.id}}/victory">
+		<ion-nav-view name="battle-victory"></ion-nav-view>
+	</ion-tab>
 
 </ion-tabs>
