build for device

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,7 +19,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-		<ion-item nav-clear menu-close ng-repeat="battle in battles" ng-click="select(battle)" href="#/app/battle/{{battle.id}}/turn">
+		<ion-item nav-clear menu-close ng-repeat="battle in battles" ng-click="select(battle)" href="#/app/battle/{{battle.id}}/initiative">
       <div class="pull-left">
         <img class="battle-image" src="img/{{battle.image}}" />
       </div>
