--- a/www/templates/battle-tab-turn.html
+++ b/www/templates/battle-tab-turn.html
@@ -4,17 +4,27 @@
       </button>
    </ion-nav-buttons>
 	<ion-content padding="true">
-		<div class="responsive-sm">
+		<div class="turn">
 			<div class="row">
-				<button class="col-10 button button-positive ion-chevron-left" ng-click="turnPrev()"></button>
-				<input  class="col-80 text-center" type="text" readonly="readonly" value="{{turn | date:'MMM d, y h:mm a'}}" />
-				<button class="col-10 button button-positive ion-chevron-right" ng-click="turnNext()"></button>
-			</div>
-			<br/>
-			<div class="row">
-				<button class="col-10 button button-positive ion-chevron-left" ng-click="phasePrev()"></button>
-				<input class="col-80 text-center" type="text" readonly="readonly" value="{{phase}}">
-				<button class="col-10 button button-positive ion-chevron-right" ng-click="phaseNext()"></button>
+				<div class="col col-20">
+					<img class="battle-image-lg" src="img/{{battle.image}}" />
+				</div>
+				<div class="col col-80">
+					<div class="col">
+						<div class="row">
+							<button class="col-10 button button-positive ion-chevron-left" ng-click="turnPrev()"></button>
+							<input  class="col-80 text-center" type="text" readonly="readonly" value="{{turn | date:'MMM d, y h:mm a'}}" />
+							<button class="col-10 button button-positive ion-chevron-right" ng-click="turnNext()"></button>
+						</div>
+					</div>
+					<div class="col">
+						<div class="row">
+							<button class="col-10 button button-positive ion-chevron-left" ng-click="phasePrev()"></button>
+							<input class="col-80 text-center" type="text" readonly="readonly" value="{{phase}}">
+							<button class="col-10 button button-positive ion-chevron-right" ng-click="phaseNext()"></button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</ion-content>
